force-app/main/default/objects/Review_Vote__c/Review_Vote__c.object-meta.xml
<CustomObject>
    <description>Stores voting feedback on property reviews.</description>
    <label>Review Vote</label>
    <pluralLabel>Review Votes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>