force-app/main/default/objects/Review_Vote__c/fields/Property_Review__c.field-meta.xml
<CustomField>
    <fullName>Property_Review__c</fullName>
    <description>Link to the property review.</description>
    <label>Property Review</label>
    <referenceTo>Property_Review__c</referenceTo>
    <relationshipLabel>Review Votes</relationshipLabel>
    <relationshipName>Review_Votes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>