force-app/main/default/objects/Review_Vote__c/fields/Vote_Type__c.field-meta.xml
<CustomField>
    <fullName>Vote_Type__c</fullName>
    <description>Helpful or unhelpful vote.</description>
    <label>Vote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Helpful</fullName>
                <default>true</default>
                <label>Helpful</label>
            </value>
            <value>
                <fullName>Unhelpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>