force-app/main/default/objects/Review_Vote__c/fields/Voter__c.field-meta.xml
<CustomField>
    <fullName>Voter__c</fullName>
    <description>User who cast the vote.</description>
    <label>Voter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Review Votes</relationshipLabel>
    <relationshipName>Review_Votes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>