force-app/main/default/objects/Review_Vote__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weighted influence for this vote.</description>
    <label>Weight</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>